# touist-editor

./: .gitlab-ci.yml  README.md  docker-compose.dev.yml  docker-compose.yml
touist-ide/: .dockerignore  .eslintrc.js  .prettierrc  Dockerfile  package.json
touist-ide/config/: dev.env.js  index.js  prod.env.js
touist-ide/src/: App.vue  config.js  initEditor.js  main.js
touist-ide/src/components/: FileList.vue  LatexPreview.vue  ModelList.vue  TouistEditor.vue
touist-ide/src/components/model-types/: SudokuModel.vue  TableModel.vue  index.js
touist-ide/src/pages/: Editor.vue  Home.vue
touist-ide/src/router/: index.js
touist-ide/src/store/: index.js
touist-nginx/: nginx.conf
touist-server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
touist-server/src/: main.rs
