[package]
name = "touist-server"
version = "0.1.0"
authors = ["Sebastien Lacoste <contact@graphman.fr>"]

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = "0.3.17"
regex = "1.0.6"
serde = "1.0.80"
serde_derive = "1.0.80"
lazy_static = "1.2.0"
log = "0.4.6"

# This is a trick in order to avoid the rebuild of every dependency package.
# We only want our main.rs to be recompiled, the rest should be cached by
# docker. See: https://stackoverflow.com/a/39662015/3808537
[lib]
name = "dummy"
path = "dummy.rs"
